WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310256
[Navigation API] navigation.currentEntry.id doesn't change in private windows after history.replaceState
https://bugs.webkit.org/show_bug.cgi?id=310256
Summary
[Navigation API] navigation.currentEntry.id doesn't change in private windows...
rupin
Reported
2026-03-19 00:16:41 PDT
[Navigation API] navigation.currentEntry.id doesn't change in private windows after history.replaceState
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-19 00:16:47 PDT
<
rdar://problem/172897962
>
rupin
Comment 2
2026-03-19 00:23:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60918
EWS
Comment 3
2026-03-19 10:05:03 PDT
Committed
309560@main
(2234866e77d3): <
https://commits.webkit.org/309560@main
> Reviewed commits have been landed. Closing PR #60918 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug